<resources>
    <string name="app_name">Calender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thrus">Thrus</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="fab_button">fab_button</string>
</resources>